[package]
name = "filters"
version = "0.1.0"
edition = "2021"
description = "A set of filters on images, for the heck of it."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = "0.12"
image = "0.24"
pollster = "0.2.5"
bytemuck = { version = "1.7", features = ["derive"] }
clap = { version = "3.0", features = ["cargo"] }
anyhow = "1.0"
