[package]
name = "filters"
version = "0.1.0"
edition = "2021"
description = "A set of filters on images, for the heck of it."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = "0.12"
bytemuck = { version = "1.7", features = ["derive"] }
